fix the contact page and that is a wrap for now

--- a/app/globals.css
+++ b/app/globals.css
@@ -131,15 +131,6 @@ button:hover {
 }
 /* audio player controls */
 
-.control-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  max-width: 700px;
-  padding: 1rem;
-}
-
 .control {
   position: relative;
   height: 100%;
